--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     />
     <link rel="apple-touch-icon" href="./favicon.svg" />
     
-		<link href="./_app/immutable/assets/0.CZwjSq7A.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.BdwoajHO.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CxltfsvI.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BxZIZ0mu.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CT2lBa9W.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BN5hZea-.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Cw28AJ-r.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D4tB4DRY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C88vm6q9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/dR2ARH6f.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DO0PSofj.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BtBANvxK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.NCsPdSXr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/NZTpNUN0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/6g30B3Hu.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DlxyS0lU.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Cw6DhSLt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CwkVU6ps.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CAWEkRoh.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.B96-IffR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Bj_Ne2mG.js"><!--[--><meta name="description" content="Get the latest GrabFood vouchers. Save money on your food delivery orders with verified promo codes from restaurants across the Philippines."/><!--]--><title>GrabFood Voucher Codes</title>
   </head>
   <body class="bg-gray-50">
@@ -33,7 +33,7 @@
 			
 			<script>
 				{
-					__sveltekit_15vcm8t = {
+					__sveltekit_11nz55h = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/sveltekit-gh-pages"
 					};
@@ -41,8 +41,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BxZIZ0mu.js"),
-						import("./_app/immutable/entry/app.DO0PSofj.js")
+						import("./_app/immutable/entry/start.BN5hZea-.js"),
+						import("./_app/immutable/entry/app.NCsPdSXr.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
