--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     
 		<link href="./_app/immutable/assets/0.OFeyT4AA.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CxltfsvI.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BuqRJwNu.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D6hzgYfS.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DHNk4BTL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DQxet5HJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D-bh-y95.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DRkcCToG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Bg5CzYEb.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.E45pN8rj.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BEbB9tNh.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.cJt6kwEH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/NZTpNUN0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Cegzo3ME.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.BwDbHWAb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BBLlqHv5.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.B_iudTj5.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Duf1TfYx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BMt-1YD5.js"><!--[--><meta name="description" content="Get the latest vouchers. Save money on your food delivery orders with verified promo codes from restaurants across the Philippines."/><!--]--><title>Voucher Codes</title>
   </head>
   <body class="bg-gray-50">
@@ -33,7 +33,7 @@
 			
 			<script>
 				{
-					__sveltekit_fwopb2 = {
+					__sveltekit_a56t8b = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/sveltekit-gh-pages"
 					};
@@ -41,8 +41,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BuqRJwNu.js"),
-						import("./_app/immutable/entry/app.E45pN8rj.js")
+						import("./_app/immutable/entry/start.DHNk4BTL.js"),
+						import("./_app/immutable/entry/app.cJt6kwEH.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
