--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     />
     <link rel="apple-touch-icon" href="./favicon.svg" />
     
-		<link href="./_app/immutable/assets/0.CXlYqZLQ.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Bt38RZgE.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CtYlBUsz.js">
+		<link href="./_app/immutable/assets/0.CQokVEdn.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DcxrVoo_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C7jkCuNY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CQyUmOvY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/UodMxfyu.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/PbVHrz5t.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B4TKg2xo.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CmwR48b3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.D79EdML9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/NZTpNUN0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DFLAJfO8.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Khog4t3-.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CmU7yLWp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/dBp6wrf2.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DRQq_TOP.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.BPDVRI-j.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CwuYyTAu.js"><!--[--><meta name="description" content="Get the latest vouchers. Save money on your food delivery orders with verified promo codes from restaurants across the Philippines."/><!--]--><title>Voucher Codes</title>
   </head>
   <body class="bg-gray-50">
@@ -43,7 +43,7 @@
 			
 			<script>
 				{
-					__sveltekit_t1rwon = {
+					__sveltekit_taispm = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/sveltekit-gh-pages"
 					};
@@ -51,8 +51,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Bt38RZgE.js"),
-						import("./_app/immutable/entry/app.B4TKg2xo.js")
+						import("./_app/immutable/entry/start.DcxrVoo_.js"),
+						import("./_app/immutable/entry/app.D79EdML9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
